--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,27 +30,13 @@
 	      
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="/form.html">회원가입</a></li>
+	        <li><a href="/list.html">사용자 목록</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<div class="container">
-		<form action="/create" method="post">
-		  <div class="form-group">
-		    <label for="empId">사번</label>
-		    <input type="text" class="form-control" name="empId" id="empId" placeholder="사번">
-		  </div>
-		  <div class="form-group">
-		    <label for="password">Password</label>
-		    <input type="password" class="form-control" name="password" id="password" placeholder="비밀번호">
-		  </div>
-		  <div class="form-group">
-		    <label for="userName">이름</label>
-		    <input type="text" class="form-control" name="userName" id="userName" placeholder="이름">
-		  </div>
-		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
+    <h1>Hello, world! templete</h1>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
